--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "course-calculator",
-    "slug": "course-calculator",
+    "name": "Course Calculator",
+    "slug": "Course Calculator",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
