--- a/app.json
+++ b/app.json
@@ -8,17 +8,14 @@
     "scheme": "coursecalculator",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": false,
-
     "splash": {
       "image": "./assets/images/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-
     "ios": {
       "supportsTablet": true
     },
-
     "android": {
       "package": "com.satinder.coursecalculator",
       "versionCode": 1,
@@ -29,11 +26,9 @@
       },
       "edgeToEdgeEnabled": true
     },
-
     "web": {
       "favicon": "./assets/images/favicon.png"
     },
-
     "plugins": [
       "expo-router",
       [
@@ -46,9 +41,14 @@
         }
       ]
     ],
-
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "698c20bb-ecff-4cae-82fd-fd3e80470371"
+      }
     }
   }
 }
